add_library(FileIOManager STATIC
    "src/Base/Compressor.cpp"
    "src/Base/Conversion.cpp"
    "src/Base/DebugStream.cpp"
    "src/Base/Halt.cpp"
    "src/Base/IBinaryStream.cpp"
    "src/Base/MemoryManager.cpp"
    "src/Base/OStringStream.cpp"
    "src/Base/PrimeNumber.cpp"
    "src/Base/RefString.cpp"
    "src/FileIO/InFile.cpp"
    "src/FileIO/Manager.cpp"
)